--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,63 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
-  /* margin: 0; */
-  /* padding: 0; */
+  margin: 0;
+  padding: 0;
   /* border: 1px solid red; */
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem auto;
+  max-width: 90%;
+}
+
+ul {
+  width: 100%;
+  border: 1px solid #050647;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+li {
+  width: 100%;
+  border-bottom: 1px solid rgb(234, 234, 234);
+
+  display: flex;
+  justify-content: space-around;
+}
+
+.product-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+
+  flex-basis: 85%;
+}
+
+figure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  flex-basis: 15%;
+}
+
+img {
+  height: 30px;
+  border-radius: 50%;
+}
+
+h1 {
+  padding: 1rem;
+  text-align: center;
+}
+
+input {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #050647;
+  border-radius: 10px;
 }
